--- a/index.html
+++ b/index.html
@@ -21,10 +21,20 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/animate.css">
         <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.min.css">
+        <link rel="stylesheet" type="text/css" href="css/responsive.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    </head>
 
+                <!-- Bootstrap JS -->
+        <script src="js/jquery.js"></script>
+        <script src="js/jquery.counterup.min.js"></script>
+        <script src="js/jquery.waypoints.min.js"></script>
+        <script src="js/jquery.bxslider.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/wow.min.js"></script>
+        <script src="js/fontawesome-all.min.js"></script>
+        <script src="js/script.js"></script>
+          </head>
 
     <body>
 
@@ -105,8 +115,8 @@
                     <div class="header-btns">
 
                         <!-- Header buttons -->
-                        <a class="btn btn-download" href="#">Télécharger</a>
-                        <a class="btn btn-tour" href="#">Tour rapide<i class="fa fa-angle-down"></i></a>
+                        <a class="btn btn-download wow fadeInLeft" href="#">Télécharger</a>
+                        <a class="btn btn-tour wow fadeInRight" href="#">Tour rapide<i class="fa fa-angle-down"></i></a>
 
 
                     </div>
@@ -171,14 +181,14 @@
                       <div class="col-md-6">
 
                         <!-- About iphone -->
-                        <div class="about-iphone">
+                        <div class="about-iphone wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
 
                             <img src="images/about-iphone.png" alt="iphone">
 
                         </div>
                       </div>
 
-                      <div class="col-md-6">
+                      <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
                         <!-- Why choose us title -->
                         <div class="choose-us-title">
 
@@ -193,7 +203,7 @@
                         <div class="choose-us-des">
 
                             <!-- choose us item 1 -->
-                          <div class="choose-us-item">
+                          <div class="choose-us-item wow fadeInUp" data-wow-duration=".5s" data-wow-delay="1s">
 
                             <!-- choose us item icon -->
                             <div><i class="fa fa-bolt"></i></div>
@@ -205,7 +215,7 @@
                           </div>
 
                           <!-- choose us item 2 -->
-                        <div class="choose-us-item">
+                        <div class="choose-us-item wow fadeInUp" data-wow-duration=".5s" data-wow-delay="1.5s">
 
                           <!-- choose us item icon -->
                           <div><i class="fa fa-bullhorn"></i></div>
@@ -217,7 +227,7 @@
                         </div>
 
                         <!-- choose us item 3 -->
-                      <div class="choose-us-item">
+                      <div class="choose-us-item wow fadeInUp" data-wow-duration=".5s" data-wow-delay="1.5s">
 
                         <!-- choose us item icon -->
                         <div><i class="fa fa-flag"></i></div>
@@ -245,7 +255,7 @@
 
                     <div class="row">
 
-                      <div class="col-md-12">
+                      <div class="col-md-12 wow bounceInDown">
 
                         <div id="carousel-testimonial" class="carousel slide" data-ride="carousel">
 
@@ -322,7 +332,7 @@
 
                     <div class="col-md-10 col-md-offset-1">
 
-                      <div class="section-title">
+                      <div class="section-title wow fadeIn" data-wow-duration="1s">
 
                         <h2>Features</h2>
 
@@ -343,7 +353,7 @@
 
                     <div class="row">
 
-                      <div class="col-md-4">
+                      <div class="col-md-4 wow fadeInLeft" data-wow-duration="1s">
 
                         <!-- left feature item 01 -->
 
@@ -412,12 +422,12 @@
 
                           <div class="feature-iphone">
 
-                              <img src="images/iphone-02.png" alt="feature iphone">
+                              <img class="wow bounceIn" data-wow-duration="1s" src="images/iphone-02.png" alt="feature iphone">
 
                           </div>
                       </div>
 
-                      <div class="col-md-4">
+                      <div class="col-md-4 wow fadeInRight" data-wow-duration="1s">
 
                           <!-- Right feature item 01 -->
                           <div class="right-feature-item">
@@ -495,7 +505,7 @@
 
                 <div class="container">
 
-                    <div class="row">
+                    <div class="row wow fadeInLeftBig" data-wow-duration="1s">
 
                       <div class="col-md-9">
 
@@ -553,7 +563,7 @@
                 </div>
 
 
-                <div class="screen-slider">
+                <div class="screen-slider wow bounceInRight" data-wow-duration="1s">
 
                   <div class="container">
 
@@ -596,7 +606,7 @@
 
                 <div class="counter-overlay">
 
-                  <div class="container">
+                  <div class="container wow bounceInLeft" data-wow-duration="1s">
 
                       <div class="row text-center">
 
@@ -676,7 +686,7 @@
 
                     <div class="row">
 
-                      <div class="col-md-8 col-md-offset-2">
+                      <div class="col-md-8 col-md-offset-2 wow fadeInUp" data-wow-duration="1s">
 
                         <img src="images/download-screen.png" alt="download screen">
 
@@ -688,7 +698,7 @@
               <!-- Available On -->
               <section class="available-on">
 
-                <div class="container">
+                <div class="container wow bounceInRight" data-wow-duration="1s">
 
                   <div class="row">
 
@@ -768,7 +778,7 @@
               <!-- Contact Us -->
               <section class="contact-us" id="CONTACT">
 
-                <div class="container">
+                <div class="container wow bounceIn">
 
                   <div class="row">
 
@@ -789,7 +799,7 @@
                 </div>
 
 
-                <div class="contact-us-form">
+                <div class="contact-us-form wow bounceIn">
 
                   <div class="container">
 
@@ -826,7 +836,7 @@
 
                     <div class="row">
 
-                      <div class="col-md-12">
+                      <div class="col-md-12 wow bounceInLeft">
 
                         <div class="social-icons">
 
@@ -895,16 +905,6 @@
 
 
               </footer>
-
-        <!-- Bootstrap JS -->
-              <script src="js/script.js"></script>
-              <script src="js/jquery.js"></script>
-              <script src="js/jquery.counterup.min.js"></script>
-              <script src="js/jquery.waypoints.min.js"></script>
-              <script src="js/jquery.bxslider.min.js"></script>
-    		      <script src="js/bootstrap.min.js"></script>
-              <script src="js/wow.min.js"></script>
-              <script src="js/fontawesome-all.min.js"></script>
 
     </body>
 
